--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "net25-kurs-2-fullstack-alaa-alsous",
+  "name": "task-track",
   "version": "1.0.0",
-  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/2XOSb5hU)\r # .NET25: Fullstack",
+  "description": "Task-Track",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EduEdugrade/net25-kurs-2-fullstack-alaa-alsous.git"
+    "url": "https://github.com/AlaaAlsous/Task-Track.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "bugs": {
-    "url": "https://github.com/EduEdugrade/net25-kurs-2-fullstack-alaa-alsous/issues"
+    "url": "https://github.com/AlaaAlsous/Task-Track/issues"
   },
-  "homepage": "https://github.com/EduEdugrade/net25-kurs-2-fullstack-alaa-alsous#readme",
+  "homepage": "https://github.com/AlaaAlsous/Task-Track#readme",
   "dependencies": {
-    "express": "^5.2.1"
+    "bcrypt": "^5.1.1",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2"
+  },
+  "overrides": {
+    "tar": ">=7.5.4",
+    "@mapbox/node-pre-gyp": ">=1.0.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
